--- a/roombuds/package.json
+++ b/roombuds/package.json
@@ -13,6 +13,7 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "aws-sdk": "^2.1253.0",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
     "next": "13.0.2",
