--- a/roombuds/package.json
+++ b/roombuds/package.json
@@ -22,6 +22,7 @@
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-select": "^5.7.0",
     "styled-components": "^5.3.6",
     "typescript": "4.8.4"
   },
