--- a/roombuds/package.json
+++ b/roombuds/package.json
@@ -21,6 +21,7 @@
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
     "next": "13.0.2",
+    "nodemailer": "^6.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-select": "^5.7.0",
@@ -28,6 +29,7 @@
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@types/nodemailer": "^6.4.7",
     "@types/styled-components": "^5.1.26"
   }
 }
