--- a/roombuds/package.json
+++ b/roombuds/package.json
@@ -23,6 +23,7 @@
     "next": "13.0.2",
     "nodemailer": "^6.8.0",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-select": "^5.7.0",
     "styled-components": "^5.3.6",
