--- a/roombuds/package.json
+++ b/roombuds/package.json
@@ -14,7 +14,8 @@
     "@emotion/styled": "^11.10.6",
     "@material-ui/core": "^4.12.4",
     "@material-ui/pickers": "^3.3.10",
-    "@mui/material": "^5.11.9",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.11.16",
     "@react-hook/media-query": "^1.1.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
